# Sound_Synthesizer

./: CMakeLists.txt  README.md
src/: main.cpp  oscillator.cpp  oscillator.h  sound_handler.cpp  sound_handler.h
